scalaplugin/src/test/resource/acyclic/src/test/resources/success/pkg/mutualcyclic/b/B1.scala
package success.cyclicpackage.b


class B1 {

 }
