scalaplugin/src/test/resource/acyclic/src/test/resources/fail/cyclicpackage/b/B1.scala
package fail.cyclicpackage.b
import acyclic.file
class B1